<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/night_mode_key"
            app:summaryOff="@string/night_mode_off"
            app:summaryOn="@string/night_mode_on"
            app:title="@string/night_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Auto Save">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="Auto Save"
            app:summaryOff="Game will not be saved when exiting."
            app:summaryOn="Game will be saved when exiting"
            app:title="Auto Save app" />
    </PreferenceCategory>

</PreferenceScreen>